k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-mi-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: account-mi-client
          image: "innon/account-mi-client"
          ports:
            - containerPort: 3000
