k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-mi-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      labels:
        component: db
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: mongo-db
          image: "innon/account-mi-mongo"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db-storage
              mountPath: /data/db
