k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-mi-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: account-mi-server
          image: "innon/account-mi-server"
          ports:
            - containerPort: 8080
