k8s/mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-mi-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 27017
      targetPort: 27017
